--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -95,7 +95,31 @@
     </div>
     <div v-show="selected_option == 'estadisticas'">
         <div v-if="opta_competition>0 && opta_season>0 && opta_match_id>0" class="tw-bg-gray tw-p-6">
-            <opta-widget widget="matchstats" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="lineups" live="true" side="both" column_count="1" side_by_side="true" show_match_header="true" show_score="true" show_halftime_score="false" show_crests="false" show_team_formation="true" show_competition_name="false" show_date="false" date_format="dddd D MMMM YYYY" order_by="jersey" group_by_position="false" show_position="true" show_images="false" show_key="false" show_starters="true" show_goalkeepers="true" show_defenders="true" show_midfielders="true" show_forwards="true" show_subs="true" show_unused_subs="false" show_managers="true" show_captain="false" show_match_events="true" competition_naming="full" team_naming="full" player_naming="full" show_live="true" show_logo="false" show_title="true" breakpoints="400, 700" sport="football"></opta-widget>
+            <opta-widget
+                    sport="football"
+                    widget="matchstats"
+                    :competition="opta_competition" :season="opta_season" :match="opta_match_id"
+                    template="team_graphs"
+                    live="true"
+                    navigation="tabs_more"
+                    default_nav="1"
+                    show_match_header="true"
+                    show_score="true"
+                    show_halftime_score="false"
+                    show_crests="true"
+                    show_team_formation="false"
+                    show_competition_name="false"
+                    graph_style="full"
+                    show_date="false"
+                    show_social="false"
+                    rounding="1"
+                    competition_naming="full"
+                    team_naming="full"
+                    show_live="true"
+                    show_logo="false"
+                    show_title="false"
+                    breakpoints="400, 700">
+            </opta-widget>
         </div>
     </div>
 </div>
