--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -80,7 +80,7 @@
                             <img :src="'/sites/default/files/assets/img/icon/gamecast/' + imageEventsOpta(event.type) +'.png'" alt="" class="tw-mx-2">
                         </div>
                     </div>
-                </div>    
+                </div>
             </div>
             <div class="tw-w-1/4 tw-pl-6">
                 <img src="/sites/default/files/ads/banner2.png" alt="Banner">
@@ -95,6 +95,31 @@
     </div>
     <div v-show="selected_option == 'estadisticas'">
         <div v-if="opta_competition>0 && opta_season>0 && opta_match_id>0" class="tw-bg-gray tw-p-6">
+            <opta-widget
+                    sport="football"
+                    widget="matchstats"
+                    :competition="opta_competition" :season="opta_season" :match="opta_match_id"
+                    template="team_graphs"
+                    live="true"
+                    navigation="tabs_more"
+                    default_nav="1"
+                    show_match_header="true"
+                    show_score="true"
+                    show_halftime_score="false"
+                    show_crests="true"
+                    show_team_formation="false"
+                    show_competition_name="false"
+                    graph_style="full"
+                    show_date="false"
+                    show_social="false"
+                    rounding="1"
+                    competition_naming="full"
+                    team_naming="full"
+                    show_live="true"
+                    show_logo="false"
+                    show_title="false"
+                    breakpoints="400, 700">
+            </opta-widget>
             <opta-widget
                     sport="football"
                     widget="matchstats"
