--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -122,28 +122,36 @@
             </opta-widget>
             <opta-widget
                     sport="football"
-                    widget="matchstats"
+                    widget="heatmap"
                     :competition="opta_competition" :season="opta_season" :match="opta_match_id"
-                    template="team_graphs"
+                    preselected_player="all"
+                    template="normal"
                     live="true"
-                    navigation="tabs_more"
-                    default_nav="1"
-                    show_match_header="true"
+                    show_maps="all"
+                    orientation="horizontal"
+                    side="both"
+                    dimension="2D"
+                    one_direction="false"
+                    show_match_header="false"
                     show_score="true"
                     show_halftime_score="false"
                     show_crests="true"
-                    show_team_formation="false"
-                    show_competition_name="false"
-                    graph_style="full"
-                    show_date="false"
-                    show_social="false"
-                    rounding="1"
+                    show_team_formation="true"
+                    show_competition_name="true"
+                    show_date="true"
+                    date_format="dddd D MMMM YYYY"
+                    show_team_sheets="true"
+                    show_subs="true"
+                    show_position="true"
+                    show_timecontrols="true"
+                    show_timecontrols_buttons="true"
+                    show_timecontrols_bar="true"
+                    show_tooltips="false"
                     competition_naming="full"
                     team_naming="full"
-                    show_live="true"
+                    player_naming="full"
                     show_logo="false"
-                    show_title="false"
-                    breakpoints="400, 700">
+                    show_title="false">
             </opta-widget>
         </div>
     </div>
