--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -93,8 +93,8 @@
             <opta-widget widget="match_player_compare" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="normal" live="true" navigation="tabs_more" default_nav="1" show_match_header="false" show_selects="true" show_images="false" show_crests="false" show_competition_name="false" competition_naming="full" team_naming="full" player_naming="full" show_date="true" date_format="dddd D MMMM YYYY" show_logo="false" show_title="true" breakpoints="400, 700" sport="football"></opta-widget>
         </div>
     </div>
-    <div v-if="selected_option == 'estadisticas'">
-        <div v-if="opta_competition>0 && opta_season>0 && opta_match_id>0" class="tw-bg-gray tw-p-6 flex">
+    <div v-show="selected_option == 'estadisticas'">
+        <div v-show="opta_competition>0 && opta_season>0 && opta_match_id>0" class="tw-bg-gray tw-p-6 flex">
             <div class="tw-w-3/4">
                 <div class="tw-bg-white tw-p-6 tw-mb-6">
                     <opta-widget
@@ -164,4 +164,5 @@
             </div>
         </div>
     </div>
+    <div class="spinner tw-bg-gray-300 tw-opacity-50 tw-fixed tw-w-screen tw-h-screen tw-top-0 tw-left-0" v-if="loading"></div>
 </div>
