--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -164,5 +164,7 @@
             </div>
         </div>
     </div>
-    <div class="spinner tw-bg-gray-300 tw-opacity-50 tw-fixed tw-w-screen tw-h-screen tw-top-0 tw-left-0" v-if="loading"></div>
+    <div class="spinner tw-bg-gray-300 tw-opacity-50 tw-fixed tw-w-screen tw-h-screen tw-top-0 tw-left-0 tw-flex tw-items-center tw-justify-center" v-if="loading">
+        <div class="lds-ripple"><div></div><div></div></div>
+    </div>
 </div>
