--- a/web/themes/custom/tailwindcss/src/sass/app.scss
+++ b/web/themes/custom/tailwindcss/src/sass/app.scss
@@ -16,5 +16,6 @@ $font-title: 'Passion One', cursive;
 @import "responsive";
 @import "videos";
 @import "articles";
+@import "loader";
 
 @tailwind utilities;
