--- a/web/themes/custom/tailwindcss/src/sass/_loader.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_loader.scss
@@ -6,7 +6,7 @@
 }
 .lds-ripple div {
   position: absolute;
-  border: 4px solid #dfc;
+  @apply border-primary border-4;
   opacity: 1;
   border-radius: 50%;
   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
