--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -79,7 +79,7 @@
         <div>
             {{ page.fullcontent }}
         </div>
-        <div class="md:tw-flex tw--mx-4">
+        <div class="md:tw-flex tw--mx-4" id="main-content-region">
             {% if page.sidebar_first %}
                 <aside class="md:tw-w-1/3 tw-p-4" role="complementary">
                     {{ page.sidebar_first }}
