--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -1,4 +1,5 @@
 <div class="opta-widgets">
+    <div class="text-center title">{{ tournament_name }} - {{ round_name }}</div>
     <div v-if="opta_competition>0 && opta_season>0 && opta_match_id>0">
         <opta-widget
                 sport="football"
