--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -92,30 +92,19 @@
         <div v-if="opta_competition>0 && opta_season>0 && opta_match_id>0" class="tw-bg-gray tw-p-6 flex">
             <div class="tw-w-3/4">
                 <div class="tw-bg-white tw-p-6 tw-mb-6 tw-w-full">
-                    <opta-widget sport="football" widget="matchday_live" :competition="opta_competition" :season="opta_season" :match="opta_match_id"
-                                 template="normal" live="true" orientation="horizontal"
-                                 side="both" show_match_header="false" show_crests="true"
-                                 show_pitch_crests="true"
-                                 show_team_formation="true"
-                                 show_score="true"
-                                 show_halftime_score="true"
-                                 show_images="false"
-                                 show_pitch_images="false"
-                                 show_team_sheets="true"
-                                 show_event_icons="true"
-                                 show_player_names="true"
-                                 show_subs="all"
-                                 team_naming="full"
-                                 player_naming="initial"
-                                 show_live="true"
-                                 show_logo="false"
-                                 show_title="true"
-                                 title="Formación"
-                                 breakpoints="400, 700">
-                    </opta-widget>
+                    <opta-widget widget="chalkboard" :competition="opta_competition" :season="opta_season" :match="opta_match_id" preselected_player="all" template="normal" live="true" orientation="horizontal" side="both" one_direction="false" show_match_header="true" show_halftime_score="false" show_crests="false" show_team_formation="false" show_competition_name="false" competition_naming="full" show_date="true" date_format="dddd D MMMM YYYY" show_team_sheets="true" show_subs="true" show_position="true" show_events="true" show_tooltips="false" show_images="false" show_team_names="false" show_area_selector="false" show_timecontrols="true" show_timecontrols_buttons="true" show_timecontrols_bar="true" show_timecontrols_events="true" team_naming="full" player_naming="full" show_logo="false" show_title="true" breakpoints="400, 700" sport="football"></opta-widget>
+                </div>
+                <div class="tw-bg-white tw-p-6 tw-mb-6 tw-w-full">
+                    <opta-widget sport="football" widget="matchday_live" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="normal" live="true" orientation="horizontal" side="both" show_match_header="false" show_crests="true" show_pitch_crests="true" show_team_formation="true" show_score="true" show_halftime_score="true" show_images="false" show_pitch_images="false" show_team_sheets="true" show_event_icons="true" show_player_names="true" show_subs="all" team_naming="full" player_naming="initial" show_live="true" show_logo="false" show_title="true" title="Formación" breakpoints="400, 700"></opta-widget>
                 </div>
                 <div class="tw-bg-white tw-p-6 tw-mb-6 tw-w-full">
                     <opta-widget widget="match_player_compare" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="normal" live="true" navigation="tabs_more" default_nav="1" show_match_header="false" show_selects="true" show_images="false" show_crests="false" show_competition_name="false" competition_naming="full" team_naming="full" player_naming="full" show_date="true" date_format="dddd D MMMM YYYY" show_logo="false" show_title="true" breakpoints="400, 700" sport="football"></opta-widget>
+                </div>
+                <div class="tw-bg-white tw-p-6 tw-mb-6 tw-w-full">
+                    <opta-widget widget="goal_replay" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="normal" live="true" animation="true" orientation="horizontal" panning="narrow" plot_events="5" show_direction_of_play="true" show_match_header="false" show_popup_events="all" show_score="true" show_halftime_score="false" show_crests="false" show_images="true" show_team_formation="false" show_competition_name="false" show_date="true" show_events="true" show_events_bar="true" date_format="dddd D MMMM YYYY" show_tooltips="false" competition_naming="full" team_naming="full" player_naming="full" show_live="true" show_logo="false" show_title="false" breakpoints="450, 700" sport="football"></opta-widget>
+                </div>
+                <div class="tw-bg-white tw-p-6 tw-mb-6 tw-w-full">
+                    <opta-widget widget="pass_matrix" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="normal" live="true" orientation="horizontal" show_selects="both" top_combinations="5" show_match_header="true" show_crests="false" show_team_formation="true" show_competition_name="false" show_timecontrols="true" navigation="tabs_more" default_nav="1" one_direction="false" competition_naming="full" show_date="true" date_format="dddd D MMMM YYYY" team_naming="full" player_naming="full" show_tooltips="false" show_logo="false" show_title="true" breakpoints="400, 700" sport="football"></opta-widget>
                 </div>
             </div>
             <div class="tw-w-1/4 tw-pl-6">
@@ -154,39 +143,18 @@
                     </opta-widget>
                 </div>
                 <div class="tw-bg-white tw-p-6 tw-mb-6">
-                    <opta-widget
-                            sport="football"
-                            widget="heatmap"
-                            :competition="opta_competition" :season="opta_season" :match="opta_match_id"
-                            preselected_player="all"
-                            template="normal"
-                            live="true"
-                            show_maps="all"
-                            orientation="horizontal"
-                            side="both"
-                            dimension="2D"
-                            one_direction="false"
-                            show_match_header="false"
-                            show_score="true"
-                            show_halftime_score="false"
-                            show_crests="true"
-                            show_team_formation="true"
-                            show_competition_name="true"
-                            show_date="true"
-                            date_format="dddd D MMMM YYYY"
-                            show_team_sheets="true"
-                            show_subs="true"
-                            show_position="true"
-                            show_timecontrols="true"
-                            show_timecontrols_buttons="true"
-                            show_timecontrols_bar="true"
-                            show_tooltips="false"
-                            competition_naming="full"
-                            team_naming="full"
-                            player_naming="full"
-                            show_logo="false"
-                            show_title="false">
-                    </opta-widget>
+                    <opta-widget sport="football" widget="heatmap" :competition="opta_competition" :season="opta_season" :match="opta_match_id" preselected_player="all" template="normal" live="true" show_maps="all" orientation="horizontal" side="both" dimension="2D" one_direction="false" show_match_header="false" show_score="true" show_halftime_score="false" show_crests="true" show_team_formation="true" show_competition_name="true" show_date="true" date_format="dddd D MMMM YYYY" show_team_sheets="true" show_subs="true" show_position="true" show_timecontrols="true" show_timecontrols_buttons="true" show_timecontrols_bar="true" show_tooltips="false" competition_naming="full" team_naming="full" player_naming="full" show_logo="false" show_title="false"></opta-widget>
+                </div>
+                <div class="tw-bg-white tw-p-6 tw-mb-6">
+                    <opta-widget widget="attacking_thirds" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="normal" live="true" orientation="horizontal" side="both" half_pitch="false" one_direction="false" navigation="tabs_more" animation="true" show_match_header="true" show_halftime_score="false" show_crests="false" show_pitch_crests="false" show_competition_name="false" show_timecontrols="false" proportional_arrows="false" competition_naming="full" team_naming="full" show_date="true" date_format="dddd D MMMM YYYY" show_logo="false" show_title="true" show_live="true" breakpoints="400, 700" sport="football"></opta-widget>
+                </div>
+                <div class="tw-bg-white tw-p-6 tw-mb-6">
+                    <opta-widget widget="average_positions" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="normal" live="true" orientation="horizontal" side="both" show_match_header="false" show_halftime_score="false" show_crests="false" show_pitch_crests="false" show_graphics="all" default_nav="1" show_images="true" show_subs="true" show_competition_name="false" show_date="true" date_format="dddd D MMMM YYYY" show_referee="true" show_venue="true" show_attendance="true" show_team_sheets="false" subs_selected="false" competition_naming="full" team_naming="full" player_naming="full" show_logo="false" show_title="false" breakpoints="400, 700" sport="football"></opta-widget>
+                </div>
+                <div class="tw-bg-white tw-p-6 tw-mb-6">
+                    <opta-widget widget="team_compare" fixtures_type="all"
+                                 :competition="opta_competition + ',' + opta_competition" :season="opta_season + ',' + opta_season" :match="opta_match_id"
+                                 :team="opta_home_id + ',' + opta_away_id" template="normal" navigation="tabs_more" default_nav="1" show_selects="false" show_crests="false" competition_naming="full" team_naming="full" show_logo="false" show_title="true" breakpoints="400" sport="football"></opta-widget>
                 </div>
             </div>
             <div class="tw-w-1/4 tw-pl-6">
