--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -116,32 +116,7 @@
         <div v-if="opta_competition>0 && opta_season>0 && opta_match_id>0" class="tw-bg-gray tw-p-6 flex">
             <div class="tw-w-3/4">
                 <div class="tw-bg-white tw-p-6 tw-mb-6">
-                    <opta-widget
-                            sport="football"
-                            widget="matchstats"
-                            :competition="opta_competition" :season="opta_season" :match="opta_match_id"
-                            template="team_graphs"
-                            live="true"
-                            navigation="tabs_more"
-                            default_nav="1"
-                            show_match_header="true"
-                            show_score="true"
-                            show_halftime_score="false"
-                            show_crests="true"
-                            show_team_formation="false"
-                            show_competition_name="false"
-                            graph_style="full"
-                            show_date="false"
-                            show_social="false"
-                            rounding="1"
-                            competition_naming="full"
-                            team_naming="full"
-                            show_live="true"
-                            show_logo="false"
-                            show_title="true"
-                            title="Estadísticas del partido"
-                            breakpoints="400, 700">
-                    </opta-widget>
+                    <opta-widget sport="football" widget="matchstats" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="team_graphs" live="true" navigation="tabs_more" default_nav="1" show_match_header="true" show_score="true" show_halftime_score="false" show_crests="true" show_team_formation="false" show_competition_name="false" graph_style="full" show_date="false" show_social="false" rounding="1" competition_naming="full" team_naming="full" show_live="true" show_logo="false" show_title="true" title="Estadísticas del partido" breakpoints="400, 700"></opta-widget>
                 </div>
                 <div class="tw-bg-white tw-p-6 tw-mb-6">
                     <opta-widget sport="football" widget="heatmap" :competition="opta_competition" :season="opta_season" :match="opta_match_id" preselected_player="all" template="normal" live="true" show_maps="all" orientation="horizontal" side="both" dimension="2D" one_direction="false" show_match_header="false" show_score="true" show_halftime_score="false" show_crests="true" show_team_formation="true" show_competition_name="true" show_date="true" date_format="dddd D MMMM YYYY" show_team_sheets="true" show_subs="true" show_position="true" show_timecontrols="true" show_timecontrols_buttons="true" show_timecontrols_bar="true" show_tooltips="false" competition_naming="full" team_naming="full" player_naming="full" show_logo="false" show_title="true" title="Mapa de calor"></opta-widget>
