--- a/web/themes/custom/tailwindcss/src/sass/_menu.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_menu.scss
@@ -32,7 +32,7 @@
     li{
       @apply flex-1;
       a{
-        @apply text-white px-10 py-4 inline-block w-full text-center cursor-pointer;
+        @apply text-white px-10 py-4 inline-block w-full text-center cursor-pointer whitespace-no-wrap;
         font-family:$font-title; 
         &.is-active{
           @apply bg-secondary text-primary;
