--- a/web/modules/custom/optafeeds/components/widget_positions/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions/template.html
@@ -7,76 +7,101 @@
     <div class="flex flex-no-wrap overflow-x-auto w-full">
         <div @click="selectOption(option.key)" v-for="option in options" class="py-3 px-6 font-title cursor-pointer table-option" :class="selected_option == option.key?'active':''">{{ option.label }}</div>
     </div>
-    <div class="flex " style="background-color: #0ef8c3;" v-if="phases">
+    <div class="flex " style="background-color: #0ef8c3;" v-if="phases && phases.length">
         <div @click="selectPhase(phase.phase.id)" v-for="phase in phases" v-if="phase.teams && Object.keys(phase.teams).length" class="cursor-pointer phase p-2" :class="selected_phase_id == phase.phase.id?'active':''">
             {{ phase.phase.type }}
         </div>
     </div>
     <div class="border-l-8 my-6 tw-h-380 tw-overflow-y-scroll scrollbar-w-2 scrollbar-track-gray-lighter scrollbar-thumb-rounded scrollbar-thumb-gray scrolling-touch" style="border-color: #FACA32;">
-        <div class="ml-1 flex border-b-1 p-1 justify-between text-sm">
-            <div class="w-1/2 flex"></div>
-            <div v-if="selected_option == 'decline'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                <div class="flex-1">Pts</div>
-                <div class="flex-1">Prom</div>
-                <div class="flex-1">PJ</div>
-            </div>
-            <div v-else-if="selected_option == 'reclassification'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                <div class="flex-1">Pts</div>
-                <div class="flex-1">PJ</div>
-                <div class="flex-1">GF</div>
-                <div class="flex-1">GC</div>
-                <div class="flex-1">DG</div>
-            </div>
-            <div v-else-if="selected_option == 'scorers'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                <div class="flex-1">Posición</div>
-                <div class="flex-1">TG</div>
-                <div class="flex-1">PJ</div>
-            </div>
-            <div v-else class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                <div class="flex-1">J</div>
-                <div class="flex-1">V</div>
-                <div class="flex-1">D</div>
-                <div class="flex-1">E</div>
-                <div class="flex-1"><strong>Pts</strong></div>
-                <div class="flex-1">GD</div>
+        <div v-if="selected_option === 'schedules'">
+            <div v-for="(items,day) in matches" class="">
+                <div class="tw-bg-primary tw-text-white tw-p-4 capitalize">{{ moment(day).format('MMMM D YYYY') }}</div>
+                <div v-for="match in items" @click="gotoMatch(match.id)" class="tw-border-b tw-border-white tw-p-2 tw-cursor-pointer">
+                    <div class="tw-flex tw-items-center tw-justify-between tw-text-gray-700">
+                        <div class="tw-w-5/12 tw-flex tw-items-center tw-justify-start tw-text-sm">
+                            <img :src="'https://secure.omo.akamai.opta.net/image.php?secure=true&h=secure.omo.akamai.opta.net&sport=football&entity=team&description=badges&dimensions=65&id='+match.home.id" alt="" class="tw-h-8 tw-pr-2">
+                            <span>{{ match.home.name }}</span>
+                        </div>
+                        <div class="tw-w-2/12 tw-text-center tw-text-primary">
+                            <span class="tw-font-bold">{{ match.home.score }}</span> - <span class="tw-font-bold">{{ match.away.score }}</span>
+                        </div>
+                        <div class="tw-w-5/12 tw-flex tw-items-center tw-justify-end tw-text-sm tw-text-right">
+                            <span>{{ match.home.name }}</span>
+                            <img :src="'https://secure.omo.akamai.opta.net/image.php?secure=true&h=secure.omo.akamai.opta.net&sport=football&entity=team&description=badges&dimensions=65&id='+match.away.id" alt="" class="tw-h-8 tw-pl-2">
+                        </div>
+                    </div>
+                    <div class="tw-flex tw-justify-center tw-text-xs tw-text-gray-600">
+                        {{ moment(match.date).format('h:mm a') }}
+                    </div>
+                </div>
             </div>
         </div>
-        <div v-for="(row,index) in teams" v-if="index<max_rows" class="ml-1 flex border-b-1 p-1 justify-between text-sm">
-            <div class="w-1/2 flex items-center">
-                <div class="w-1/6 text-center px-2"><strong>{{ row.pos }}</strong></div>
-                <div class="w-5/6 truncate ml-1">{{ row.name }}</div>
+        <div v-else>
+            <div v-if="teams && teams.length" class="ml-1 flex border-b-1 p-1 justify-between text-sm">
+                <div class="w-1/2 flex"></div>
+                <div v-if="selected_option == 'decline'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                    <div class="flex-1">Pts</div>
+                    <div class="flex-1">Prom</div>
+                    <div class="flex-1">PJ</div>
+                </div>
+                <div v-else-if="selected_option == 'reclassification'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                    <div class="flex-1">Pts</div>
+                    <div class="flex-1">PJ</div>
+                    <div class="flex-1">GF</div>
+                    <div class="flex-1">GC</div>
+                    <div class="flex-1">DG</div>
+                </div>
+                <div v-else-if="selected_option == 'scorers'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                    <div class="flex-1">Posición</div>
+                    <div class="flex-1">TG</div>
+                    <div class="flex-1">PJ</div>
+                </div>
+                <div v-else class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                    <div class="flex-1">J</div>
+                    <div class="flex-1">V</div>
+                    <div class="flex-1">D</div>
+                    <div class="flex-1">E</div>
+                    <div class="flex-1"><strong>Pts</strong></div>
+                    <div class="flex-1">GD</div>
+                </div>
             </div>
-            <div v-if="selected_option == 'decline'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                <div class="flex-1">{{ row.pt }}</div>
-                <div class="flex-1">{{ row.prom }}</div>
-                <div class="flex-1">{{ row.pj }}</div>
+            <div v-for="(row,index) in teams" v-if="index<max_rows" class="ml-1 flex border-b-1 p-1 justify-between text-sm">
+                <div class="w-1/2 flex items-center">
+                    <div class="w-1/6 text-center px-2"><strong>{{ row.pos }}</strong></div>
+                    <div class="w-5/6 truncate ml-1">{{ row.name }}</div>
+                </div>
+                <div v-if="selected_option == 'decline'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                    <div class="flex-1">{{ row.pt }}</div>
+                    <div class="flex-1">{{ row.prom }}</div>
+                    <div class="flex-1">{{ row.pj }}</div>
+                </div>
+                <div v-else-if="selected_option == 'reclassification'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                    <div class="flex-1">{{ row.pt }}</div>
+                    <div class="flex-1">{{ row.pj }}</div>
+                    <div class="flex-1">{{ row.gf }}</div>
+                    <div class="flex-1">{{ row.gc }}</div>
+                    <div class="flex-1">{{ row.gd }}</div>
+                </div>
+                <div v-else class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                    <div class="flex-1">{{ row.pj }}</div>
+                    <div class="flex-1">{{ row.pg }}</div>
+                    <div class="flex-1">{{ row.pp }}</div>
+                    <div class="flex-1">{{ row.pe }}</div>
+                    <div class="flex-1"><strong>{{ row.pt }}</strong></div>
+                    <div class="flex-1">{{ row.gd }}</div>
+                </div>
             </div>
-            <div v-else-if="selected_option == 'reclassification'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                <div class="flex-1">{{ row.pt }}</div>
-                <div class="flex-1">{{ row.pj }}</div>
-                <div class="flex-1">{{ row.gf }}</div>
-                <div class="flex-1">{{ row.gc }}</div>
-                <div class="flex-1">{{ row.gd }}</div>
-            </div>
-            <div v-else class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                <div class="flex-1">{{ row.pj }}</div>
-                <div class="flex-1">{{ row.pg }}</div>
-                <div class="flex-1">{{ row.pp }}</div>
-                <div class="flex-1">{{ row.pe }}</div>
-                <div class="flex-1"><strong>{{ row.pt }}</strong></div>
-                <div class="flex-1">{{ row.gd }}</div>
-            </div>
-        </div>
-        <div v-for="(row,index) in players" v-if="index<max_rows" class=" ml-1 flex border-b-1 p-1 justify-between text-sm">
-            <div class="w-1/2 flex items-center">
-                <div class="w-1/6 text-center px-2"><strong>{{ row.pos }}</strong></div>
-                <div class="w-5/6 truncate ml-1">{{ row.name }}</div>
-            </div>
-            <div class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                <div class="flex-1">{{ positions[row.position] || row.position }}</div>
-                <div class="flex-1">{{ row.goals }}</div>
-                <div class="flex-1">{{ row.games_played }}</div>
-            </div>
+            <div v-for="(row,index) in players" v-if="index<max_rows" class=" ml-1 flex border-b-1 p-1 justify-between text-sm">
+                <div class="w-1/2 flex items-center">
+                    <div class="w-1/6 text-center px-2"><strong>{{ row.pos }}</strong></div>
+                    <div class="w-5/6 truncate ml-1">{{ row.name }}</div>
+                </div>
+                <div class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                    <div class="flex-1">{{ positions[row.position] || row.position }}</div>
+                    <div class="flex-1">{{ row.goals }}</div>
+                    <div class="flex-1">{{ row.games_played }}</div>
+                </div>
+            </div>    
         </div>
     </div>
     <div class="more-link full"><a href="/futbol-colombiano">Todas las estadísticas</a></div>
