--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -107,7 +107,8 @@
 }
 
 #block-views-block-goles-home-block-1,
-#block-views-block-videos-opinion-block-1
+#block-views-block-videos-opinion-block-1,
+.seccion-videos
 {
   @apply border-b border-gray;
   div div{
