--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -24,10 +24,15 @@
       }
     }
     .title{
+      font-family: $font-title;
       position: relative;
       top: 0;
       bottom: 0;
       left: 0;
+      font-size: 2.25rem; 
+      line-height: 1;
+      letter-spacing: -0.025em;
+      font-weight: 400;
       a{
         color: #0b3b41;
       }
