--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -117,6 +117,9 @@
 
 /* RESPONSIVE */
 @screen md {
+  #horizontal-results{
+    margin-top: 8rem !important;
+  }
   #block-toplinks{
     @apply block;
   }
