--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -83,9 +83,12 @@
                     </div>
                 </div>
             </div>
-            <div class="tw-w-1/4 tw-pl-6">
+            <div class="tw-hidden md:tw-block tw-w-1/4 tw-pl-6">
                 <img src="/sites/default/files/ads/banner2.png" alt="Banner">
             </div>
+        </div>
+        <div class="tw-block tw-mx-auto md:tw-hidden tw-w-1/4 tw-pl-6">
+            <img src="/sites/default/files/ads/banner2.png" alt="Banner">
         </div>
     </div>
     <div v-show="selected_option == 'alineaciones'">
